--- a/methods/fec.tex
+++ b/methods/fec.tex
@@ -39,17 +39,15 @@ The free energy of a system as a function of a parameter $\xi$ is given as
 \label{eq:free_energy_from_rho}
 A(\xi) = - \beta \ln\left(\rho(\xi)\right).
 \end{equation}
-$\rho(\xi)$ is the probability distribution of $\xi$ and can be easily obtained in MD simulation by counting the number of the appropriate visited states. Therefore, it is also referred to as a histogram. $\xi$ is called reaction coordinate and could be e.g. the distance between two molecules.\\
-However, in reality $A(\xi)$ can have big barriers, and because the potential energy $U$ is sharply distributed around its mean in $NVT$ simulations, $\rho(\xi)$ can hardly be sampled at a realistic computational cost.\\
-\\
+$\rho(\xi)$ is the probability distribution of $\xi$ and can be easily obtained in MD simulation by counting the number of the appropriate visited states. $\xi$ is called reaction coordinate and could be e.g. the distance between two molecules. However, in reality $A(\xi)$ can have big barriers, and because the potential energy $U$ is sharply distributed around its mean in $NVT$ simulations, $\rho(\xi)$ can hardly be sampled at a realistic computational cost.\\
 One way to overcome this sampling problem is umbrella sampling \autocite{originalUmbrellaSampling}. In this approach, the path $\xi$ is split up into distinct windows $[\xi_0, \xi_n]$. To each window $i$, a biasing potential $\hat{U}_i(\xi)$ can be applied to ensure a sufficient sampling of $\xi$ around $\xi_i$. This changes the potential energy to
 \begin{equation}
 U_{B, i}(\mathbf{q}) = U(\mathbf{q}) + \hat{U}_i(\xi(\mathbf{q})))
 \end{equation}
-After a simulation with the biased potential $U_{B, i}$ the unbiased measured probability distribution $\tilde{\rho}_i(\xi)$ has to be reconstructed from the observed biased one, $\tilde{\rho}_{B, i}(\xi)$. At this point, only the result is given; the full derivation can be found in \textcite[p. 179ff]{UnderstandingMD}.\\
+After a simulation with the biased potential $U_{B, i}$ the unbiased measured probability distribution $\tilde{\rho}_i(\xi)$ has to be reconstructed from the observed biased one, $\tilde{\rho}_{B, i}(\xi)$. At this point, only the result is given; the full derivation can be found in \textcite[p. 179-181]{UnderstandingMD}.\\
  \begin{equation}
  \label{eq:reconstruction_from_biased}
  \tilde{\rho}_{i}(\xi) = \exp\left(-\beta\left(\Delta A_i - \hat{U}_i(\xi)\right)\right)\tilde{\rho}_{B, i}(\xi)
  \end{equation}
 Of course $\Delta A_i$ is not known, but assuming that $\rho(\xi)$ is a continuous function, the results from the single windows can be combined and afterwards normalized.\\
-With this method, however, only two histograms can be considered in the overlapping region. Another problem is that the sampling in the tails is usually poor and statistical errors, which propagate through all overlapping regions, can become very large \autocite[236ff]{freeEnergyBook}. Therefore, umbrella sampling is usually combined with the weighted histogram analysis method (WHAM) \autocites{originalWHAM, extensionWHAM}. This algorithm is able to combine several histograms in one overlapping region and is designed to keep the statistical errors small. The main idea is to combine probability densities linearly with an additional weighting factor $\omega_i(\xi)$ to the total probability density $\tilde{\rho}$. The weighting factors $\omega_i$ are chosen iteratively in a way that the overall statistical error is minimized.\\
+With this method, however, only two probability distributions can be considered in the overlapping region. Another problem is that the sampling in the tails is usually poor and statistical errors, which propagate through all overlapping regions, can become very large \autocite[236-238]{freeEnergyBook}. Therefore, umbrella sampling is usually combined with the weighted histogram analysis method (WHAM) \autocites{originalWHAM, extensionWHAM}. This algorithm is able to combine several probability distributions in one overlapping region and is designed to keep the statistical errors small. The main idea is to combine distributions linearly with an additional weighting factor $\omega_i(\xi)$ to the total probability density $\tilde{\rho}$. The weighting factors $\omega_i$ are chosen iteratively in a way that the overall statistical error is minimized.\\
