--- a/methods/md.tex
+++ b/methods/md.tex
@@ -1,14 +1,14 @@
 Because the measurable time- and length scale of biological experiments are usually larger than those of the system, the dynamics in the system can only be measured indirectly. To get a more precise insight into the specific processes, molecular dynamics simulations (MD) are a suitable tool.\\
-In the following section, the main concepts of MD and characteristics of the used models are outlined with a special focus on the \martini{} force field. An exhaustive exploration of these methods, however, would be outside the scope of this thesis. Because \gromacs{} (\textit{GROningen MAchine for Chemical Simulations}) \autocites{gromacs1, gromacsManual} was used as MD engine in this thesis, the following explanations refer to \gromacs{} conventions and features. 
+In the following section, the main concepts of MD and characteristics of the used models are outlined with a special focus on the \martini{} force field. An exhaustive exploration of these methods, however, would be outside the scope of this thesis. Because \gromacs{} (GROningen MAchine for Chemical Simulations) \autocites{gromacs1, gromacsManual} was used as MD engine in this thesis, the following explanations refer to \gromacs{} conventions and features. 
 \subsection{The physics of MD}
-In MD, atoms are modelled as solid beads, which comprise the nucleus as well as the electron shell, and follow classical equations of motion. Due to this implicit treatment of electrons, quantum mechanical (QM) effects, such as excitation or electron transfer processes, are not accessible in MD. However, the beads are parametrized by effective parameters motivated by QM or experiments \autocite[p. 127f]{greenBook}.\\
+In MD, atoms are modelled as solid beads, which comprise the nucleus as well as the electron shell, and follow classical equations of motion. Due to this implicit treatment of electrons, quantum mechanical (QM) effects, such as excitation or electron transfer processes, are not accessible in MD. However, the beads are parametrized by effective parameters motivated by QM or experiments \autocite[p. 127-128]{greenBook}.\\
 Newton's equation of motion can be turned into two first order differential equations:
 \begin{align}
 	\label{eq:eq_of_mot_first_order}
 	\frac{\diff \vec{r}_i}{\diff t} = \vec{v}_i \\
 	m_i \frac{\diff \vec{v}_i}{\diff t} = \vec{F}_{i},
 \end{align}
-which can be integrated numerically with e.g. Leapfrog- or Verlet integration scheme. Both are time reversible and symplectic, which ensures a small long-term error in energy conservation \autocite[p. 72ff]{UnderstandingMD}. The force acting on particle $i$ is given by the gradient of the potential $V$ at its position. In MD, bonded and non-bonded interactions contribute to this potential, but also external forces can be applied:
+which can be integrated numerically with e.g. Leapfrog- or Verlet integration scheme. Both are time reversible and symplectic, which ensures a small long-term error in energy conservation \autocite[p. 72-74]{UnderstandingMD}. The force acting on particle $i$ is given by the gradient of the potential $V$ at its position. In MD, bonded and non-bonded interactions contribute to this potential, but also external forces can be applied:
 \begin{align}
 	\vec{F}_i = - \frac{\partial V}{\partial \vec{r}_i} = - \frac{\partial}{\partial \vec{r}_i} \left(V_\text{bonded} + V_\text{non-bonded} + V_\text{external}\right).
 \end{align}
@@ -40,7 +40,7 @@ where $k_\text{dihedral}$ describes the energy barrier for turning the dihedral 
 	\subcaptionbox{\label{md:fig_pot}}[6cm]{
 		\includegraphics[height=6cm]{figures/introduction/fig_potentials}
 	}%
-	\nicecaption{Interactions in MD}{(\subref{md:fig_bonds}): Illustration of stretching $r$, bending $\theta$ and the dihedral angle between blue and green plane $\Phi$. (\subref{md:fig_pot}): schematic course of contributing potentials}
+	\nicecaption{Interactions in MD}{(\subref{md:fig_bonds}): Illustration of bonded interactions: bond stretching ($r$), bending ($\theta$) and dihedral angle $\Phi$ (angle between blue and green plane). (\subref{md:fig_pot}): schematic course of contributing potentials}
 	\label{md:figs}
 \end{figure}
 %
@@ -69,20 +69,21 @@ With \gromacs{}, it is possible to perform pulling forces onto groups of atoms i
 The parameters for the potentials described above are provided by force fields. There is a wide range of force fields, which are optimized for different application fields. In this thesis, two different ones, \charmm{} and \martini{}, are employed.\\
 \\
 Force fields map atoms (particles in physical system) onto beads (particles used in the simulation). This mapping can take the chemical environment of the particle into account, but can also neglect details by e.g. mapping several atoms onto one bead (coarse graining).\\
-Force fields can be distinguished in non-polarizable and polarizable force fields. The latter offer the possibility to model electronic polarization, e.g. with additional shell beads. Orientational and geometric polarisation are also accessible with non-polarizable force fields since they only rely on partial charges \autocite[p. 215ff]{greenBook}. Both, \martini{} and \charmm{}, are non-polarizable force fields.\\  
+Force fields can be distinguished in non-polarizable and polarizable force fields. The latter offer the possibility to model electronic polarization, e.g. with additional shell beads. Orientational and geometric polarisation are also accessible with non-polarizable force fields since they only rely on partial charges \autocite[p. 215-217]{greenBook}. Both, \martini{} and \charmm{}, are non-polarizable force fields.\\  
 Force fields not only define the atom types and their properties, but also all parameters for the calculation of the potential, namely force constants, equilibrium distances, etc. Therefore, force fields define the physics of the system.
 \subsubsection{All-atom and the \charmm{} force field}
 \charmm{} \autocites{charmm36_protein}{charmm36_lipids} (C36) is part of the CHARMM (\textit{Chemistry at HARvard Macromolecular Mechanics}) MD engine and was published in 2010. In C36, all atoms are considered (all-atom force field). Parameters were mainly optimized to structural experimental data, such as nuclear magnetic resonance (NMR) or X-ray data, but also QM and semi-empirical QM calculations were used (e.g. for dihedral angles of the sidechains of proteins \autocite{charmm36_protein} and partial charges of lipids \autocite{charmm36_lipids}).\\
-All simulations for optimizing have been done with a time step of 2$\si{\femto\second}$. Therefore, very detailed dynamics are still included in the simulations.\\
+All simulations for optimizing have been done with a time step of $2\,\si{\femto\second}$. Therefore, very detailed dynamics are still included in the simulations.\\
 \\
 For all simulations, the TIP3P water model \autocite{tip3p} was used, which was also used in the parametrisation of C36. Here, each water molecule is modelled with three partially charged beads.
 \subsubsection{Coarse graining and the \martini{} force field}
 \label{subsub:coarsegraining}
-The \martini{} force field \autocites{martini}{martini22}{martini22_lipids} is one of the most famous coarse-graining force fields. Most beads are constituted of four heavy atoms (\autoref{md:martinimapping}), which implies of course a loss of chemical information, but also an enormous reduction of computational cost. With this approach much larger time- and spatial scales are accessible for MD simulations.\\
+The \martini{} force field \autocites{martini}{martini22}{martini22_lipids} is one of the most famous coarse-graining force fields. Most beads are constituted of four heavy atoms (\autoref{md:martinimapping}), which implies a loss of chemical information, but also an enormous reduction of computational cost. With this approach much larger time- and spatial scales are accessible for MD simulations.\\
+The parametrisation of \martini{} is mainly based on reproducing free energies, e.g. partitioning free energies and dimerization free energies of amino acid side chain analogues. For lipids, also thermodynamic properties, such as area per lipid, have been considered. The parameters were optimized with a time step of $20\,\si{\femto\second}$ up to $30\,\si{\femto\second}$ \autocites{martini22}{martini22_lipids}.\\
 %
 %
 %
-\begin{figure}
+\begin{figure}[b]
 	\centering
 	\includegraphics[width=.5\textwidth]{figures/introduction/fig_martini_mapping}
 	\nicecaption{\martini{} bead mapping}{\martini{} structure of \pip{} with underlying atomistic structure. Four heavy atoms are mapped to one \martini{} bead. The colour indicates the bead type.}
@@ -91,9 +92,8 @@ The \martini{} force field \autocites{martini}{martini22}{martini22_lipids} is o
 %
 %
 %
-The parametrisation of \martini{} is mainly based on reproducing free energies, e.g. partitioning free energies and dimerization free energies of amino acid side chain analogues. For lipids, also thermodynamic properties, such as area per lipid, have been considered. The parameters were optimized with a time step of 20$\si{\femto\second}$ up to 30$\si{\femto\second}$ \autocites{martini22}{martini22_lipids}.\\
 \\
-There are several side effects of coarse graining. Due to the mapping of four atoms to one bead, different atomistic structures can end up in the same \martini{} structures, which can be problematic e.g. for lipid tails. Also the secondary structure of proteins is affected as it becomes less stable in coarse-grained models. Therefore, it has to be to be constrained with elastic networks (additional bonds between backbone beads) and cannot change during the simulation \autocite{martini22_check}.\\
+There are several side effects of coarse graining. Due to the mapping of four atoms to one bead, different atomistic structures can end up in the same \martini{} structures, which can be problematic e.g. for lipid tails. Also the secondary structure of proteins is affected as it becomes less stable in coarse-grained models. Therefore, it has to be constrained with elastic networks (additional bonds between backbone beads) and cannot change during the simulation \autocite{martini22_check}.\\
 The decrease in degrees of freedom in the system also smooths the energy surface in coarse-grained models. Because smaller local irregularities in the energy surface, which would slow down the evolution of the system, are smoothed out, coarse graining speeds up the dynamics of the system. The speed-up factor is not constant, but can be relatively well approximated by factor of $4$ (obtained in most diffusion simulations) \autocites{martini22_check}{martini}.\\
 Coarse graining also has an effect on the entropy and the temperature dependency of the system. In NpT ensembles, the Gibbs free energy $G$ is given by
 \begin{equation}
@@ -111,11 +111,11 @@ As reviewed by \textcite{martini22_check}, \martini{} has been already used to s
 \label{subsec:pbc}
 Because the simulation of an open system is not possible, boundary conditions have to be considered. Closed boundaries often lead to surface interaction artefacts and are therefore in most cases not suitable for MD simulation. That is why usually periodic boundary conditions (PBC) are used.\\
 To use PBC, the shape of the simulation box has to have a space filling geometry (e.g. rectangular or rhombic dodecahedron). With periodic boundary conditions, images of the simulation box are repeated in every direction. If a particle leaves the simulation box, its periodic image is coming in from the opposite side. In that way, the number of particles is kept constant while surface interactions are avoided.\\
-A particle interacts only with the nearest image of another particle, which means that particles near boundaries can interact with periodic images of other particles instead of the real particle. Moreover, molecules can have long-range interactions with their own periodic images, which leads to artefacts and has to be considered when choosing the size of the simulation box \autocite[p. 141f]{greenBook}.
+A particle interacts only with the nearest image of another particle, which means that particles near boundaries can interact with periodic images of other particles instead of the real particle. Moreover, molecules can have long-range interactions with their own periodic images, which leads to artefacts and has to be considered when choosing the size of the simulation box \autocite[p. 141-142]{greenBook}.
 %It is generally thought, that PBC only have small or no effects on equilibrium properties or structures of fluids, but known problems are the absence of long wavelength fluctuations (e.g. in phase transitions) or the violation of angular momentum conversation .
 \subsubsection{Thermostats}
-Integration schemes in MD are designed to conserve the energy of a system. However, in real biological systems, not the energy but rather the temperature is kept constant. This can be achieved with thermostats. For the simulations in this thesis, the Berendsen thermostat \autocite{berendsen} (BT), the Parrinello-Bussi thermostat \autocite{parinelloBussi} (PBT) and the Nosè-Hoover (NHT) thermostat \autocites{nosehooverthermo}{nosehooverthermo2} were used. BT couples the system to a heat bath by rescaling the velocities of the particles, which results in an exponential decay of temperature deviations. The coupling strength is given by the time constant of this decay. The rescaling involves a transfer of kinetic energy from internal degrees of freedom to translational and rotational kinetic energy of the system's COM \autocite{velRescaleSucks}. In order to prevent this transfer, PBT extends BT by a stochastic term. Both BT and PBT are useful for equilibration runs or non-equilibrium MD simulations, as they are stable upon large deviations \autocites{berendsen}[p. 31]{gromacsManual}.\\
-On the other hand, NHT extends the Hamiltonian of the system by a friction term representing a heat bath. The friction parameter follows a differential equation depending on the temperature deviation. This ansatz samples the phase space more accurately, making NHT suitable for production runs. However, NHT gets unstable for large deviations \autocite[p. 32f]{gromacsManual}.\\
+Integration schemes in MD are designed to conserve the energy of a system. However, in real biological systems, not the energy but rather the temperature is kept constant. This can be achieved with thermostats. For the simulations in this thesis, the Berendsen thermostat \autocite{berendsen} (BT), the Parrinello-Bussi thermostat \autocite{parinelloBussi} (PBT) and the Nosè-Hoover thermostat \autocites{nosehooverthermo}{nosehooverthermo2} (NHT) were used. BT couples the system to a heat bath by rescaling the velocities of the particles, which results in an exponential decay of temperature deviations. The coupling strength is given by the time constant of this decay. The rescaling involves a transfer of kinetic energy from internal degrees of freedom to translational and rotational kinetic energy of the system's COM \autocite{velRescaleSucks}. In order to prevent this transfer, PBT extends BT by a stochastic term. Both BT and PBT are useful for equilibration runs or non-equilibrium MD simulations, as they are stable upon large deviations \autocites{berendsen}[p. 31]{gromacsManual}.\\
+On the other hand, NHT extends the Hamiltonian of the system by a friction term representing a heat bath. The friction parameter follows a differential equation depending on the temperature deviation. This ansatz samples the phase space more accurately, making NHT suitable for production runs. However, NHT gets unstable for large deviations \autocite[p. 32-33]{gromacsManual}.\\
 \\
 Often, groups are coupled to independent thermostats. This is helpful because the heat exchange between for instance proteins and solvents is often not correct. Therefore, proteins would cool down and the solvent would heat up \autocite[p. 34]{gromacsManual}.
 \subsubsection{Barostats}
