--- a/setup.tex
+++ b/setup.tex
@@ -1,20 +1,21 @@
 \chapter{Setup}
 \section{Protein structure}
-% TODO: cite gromacs wham?
-All simulations have been done with starting configurations adapted from previous work in the group (C36 forcefield: \textcite{pap003}, Martini forcefield: \textcite{sara}). These configurations contain only a FERM-kinase fragment without the FAT domain and its linker (residues 35 to 686, PDB 2J0J \autocite{structFAK}).\\
-As explained in \autoref{subsub:coarsegraining} the secondary structure of proteins have to be stabilized in Martini using elastic networks. This was set up by \textcite{sara}. It acts only between residues of the same domain with a force constant of 830 $\si{\kilo\joule\mole^{-1}\nano\meter^{-2}}$. Therefore the interface between FERM domain and kinase is not affected and the linker is still flexible.
+All simulations have been done with starting configurations adapted from previous work in the group (C36 forcefield: \textcite{pap003}, \martini{} forcefield: \textcite{sara}). These configurations contain only a FERM-kinase fragment without the FAT domain and its linker (only residues 35 to 686, PDB 2J0J \autocite{structFAK}).\\
+As explained in \autoref{subsub:coarsegraining} the secondary structure of proteins have to be stabilized in \martini{} using elastic networks. This was set up by \textcite{sara} to act only between backbone beads of the same domain which are within a cut-off radius of $1\,\si{\nano\metre}$. Therefore, the interface between FERM domain and kinase is not affected and the linker is still flexible. The force constant is 830 $\si{\kilo\joule\mole^{-1}\nano\meter^{-2}}$. 
 \section{Setup 1 - FAK in solution}
 \label{setup:setup1}
-This setup contains a single FAK molecule in Martini structure, which was placed in a waterbox with ions to eliminate net charges. After a short equilibration the system was simulated for $20\,\si{\micro\second}$ at a temperature of $300\si{\kelvin}$. The standard parameters of the Martini forcefield were used as simulation parameters.
+Setup 1 refers to a \martini{} simulation of a single FAK molecule in waterbox. NaCl ions were added to neutralize the charge.\\
+After a short equilibration the system was simulated for $20\,\si{\micro\second}$ at a temperature of $300\,\si{\kelvin}$. We used the default parameters of the \martini{} forcefield as input parameters.
 \section{Setup 2 - Free energy of basic patch}
 \label{setup:setup2}
-For this setup only a part of F2 (residues 107 to 219, referred as F2 lobe in the following), which contains the basic patch, was used. The lobe was placed above a single \pip{} embedded into a phosphatidylethanolamine (\pope{}) membrane (see \autoref{tobeadded}). After a short equilibration the F2 lobe was pulled slowly away from the membrane using a distance pull between the COM of the F2 lobe and the COM of \pip{}. This simulation was used to retrieve starting conformations for the umbrella windows.\\
-The starting configuration was set up in C36 and transferred to a Martini (with PW) structure with provided transformation tools \autocite{backwardpy}. In the Martini structures the mentioned elastic network was applied.\\
-The number of umbrella windows was chosen accordingly to the sampling (between 90 and 120 windows). Each window was shortly equilibrated and then simulated for $6\,\si{\nano\second}$ in C36 and $10\,\si{\nano\second}$ in Martini (with PW). From the trajectories of the umbrella windows the free energy profile was calculated using \gromacs{} WHAM implementation. For each forcefield five different profiles were obtained to estimate the statistical error.\\
-The presented results are based on a total simulation time of $6.33\,\si{\micro\second}$ for Martini, $5.64\,\si{\micro\second}$ for Martini with PW and $3.88\,\si{\micro\second}$ for C36. The temperature in the simulation was $300\si{\kelvin}$. % C36: 1=180, 4.2=135, 5=102, 5.2=102, 6=127, Mart: 1=134, 2=126, 3=130, 4=113, 5=130, MartPol: alle=113
+For this setup only a part of F2 (residues 107 to 219, referred as F2 lobe in the following) was used. The lobe contains the basic patch and has a net charge of -5. Therefore no additional ions were needed.\\
+We placed the lobe as a \charmm{} structure above a single \pip{} embedded into a phosphatidylethanolamine (\pope{}) membrane (see \autoref{tobeadded}). After a short equilibration, the F2 lobe was pulled slowly away from the membrane using a distance pull between the COM of the lobe and the COM of \pip{}. From this simulation, we retrieved starting conformations for the umbrella window. The number of umbrella windows was chosen accordingly to the sampling (between 90 and 120 windows). Each window was shortly equilibrated and afterwards simulated for $6\,\si{\nano\second}$.  From the trajectories of the umbrella windows the free energy profile was calculated using \gromacs{} WHAM implementation \autocite{gromacsWHAM}. The pulling and umbrella sampling was done five times to estimate the statistical error.\\
+The starting configurations was transferred to a \martini{} structure (with both, standard water model and PW) with provided transformation tools \autocite{backward.py}. Afterwards the elastic network was applied. Analogously to the simulation in \charmm{}, we retrieved starting configurations for the umbrella windows and simulated them for five independent copies. The simulation time for one umbrella window was increased to $10\,\si{\nano\second}$.\\
+The presented results are based on a total simulation time of $3.88\,\si{\micro\second}$ for C36, $6.33\,\si{\micro\second}$ for \martini{}, $5.64\,\si{\micro\second}$ for \martini{} with PW. The temperature in the simulations was kept at $300\,\si{\kelvin}$. For all three force fields the default parameters were used.
+% C36: 1=180, 4.2=135, 5=102, 5.2=102, 6=127, Mart: 1=134, 2=126, 3=130, 4=113, 5=130, MartPol: alle=113
 \section{Setup 3 - FAK on a \pip{} membrane}
 \label{setup:setup3}
-Setup 3 was adopted from \textcite{sara} and contains a single FAK molecule in Martini structure, which was placed on a phosphatidylcholine (\popc{}) and \pip{} (15\%) membrane. Ions were added to eliminate net charges. In contrast to \textcite{sara} the stabilizing force explained in \autoref{motivation} was applied to the protein.\\
-Five different copies were simulated for $10\,\si{\micro\second}$ each with a temperature of $300\si{\kelvin}$.
+Setup 3 is a \martini{} simulation adopted from \textcite{sara} (\autoref{tobeadded}). It contains a single FAK molecule which was placed on a phosphatidylcholine (\popc{}) and \pip{} membrane (\pip{} concentration $15\%$). NaCl were added to neutralize the system. In contrast to \textcite{sara}, we applied the stabilizing force explained in \autoref{motivation} to the protein.\\
+Five independent copies were simulated for $10\,\si{\micro\second}$ each. The temperature was kept at $300\si{\kelvin}$ and the default parameters of \martini{} were used.
 \section{Setup 4 - FAK cluster}
-In order to set up a cluster of multiple FAK molecules 25 different frames were chosen from setup 3 equidistant in time. The frames were arranged on a {5x5} grid. The stabilizing force was applied on each FAK molecule independently. After a short equilibration the system was simulated for $9\,\si{\micro\second}$. Five different copies (regarding to the arrangement of the frames) were set up, resulting in a total simulation time of $45\,\si{\micro\second}$. The temperature was set to $300\si{\kelvin}$.
+From each copy in setup 3, we cut out five frames. All these 25 frames were arranged on a {5x5} grid (\autoref{tobeadded}). Each of the 25 proteins was stabilized with the external force independently. After a short equilibration the system was simulated for $9\,\si{\micro\second}$. We set up 25 different copies, regarding to the arrangement of the frames, resulting in a total simulation time of $45\,\si{\micro\second}$. The temperature was kept at $300\,\si{\kelvin}$ and the default parameters of \martini{} were used.
