--- a/results/freeFAK.tex
+++ b/results/freeFAK.tex
@@ -49,7 +49,7 @@ The contact map for configurations of spot 1 shows similar features as obtained 
 	\subcaptionbox{\label{free:3d_spot_top}}[0.32\textwidth]{
 		\includegraphics[height=4cm]{figures/results/spot2_top}
 	}
-	\nicecaption{3D structure of FAK in the different states}{The 3D structures show the FERM domain (blue), the kinase (red) and the linker (black, transparent). The autophosphorylation site \acid{Y}{397} (green) is plunged into interface. (\subref{free:3d_spot1}): configuration of spot 1. The kinase is tilted against the domain. (\subref{free:3d_spot2} and \subref{free:3d_spot_top}): configuration of spot 2. Both domains are in line.}
+	\nicecaption{3D structure of FAK in the different states}{The 3D structures show the FERM domain (blue), the kinase (red) and the linker (black, transparent). The autophosphorylation site \acid{Y}{397} (green) is plunged into interface and hidden by the linker (\subref{free:3d_spot1}): configuration of spot 1. The kinase is tilted against the domain. (\subref{free:3d_spot2} and \subref{free:3d_spot_top}): configuration of spot 2. Both domains are in line.}
 \end{figure}
 %
 %
