--- a/document.tex
+++ b/document.tex
@@ -43,7 +43,7 @@ oneside, % oneside / twoside
 \newcommand{\nicecaption}[2]{\caption[#1]{\small{\textbf{#1}\\#2}}}
 
 
-\includeonly{methods}
+%\includeonly{setup}
 
 \begin{document}
 % chapter introduction
